Migrate API that is deprecated in Java10